# zenzen-ask-app

./: .gitignore  README.md  dev.py  main.py  pyproject.toml  requirements.in  requirements.txt
app/: agents.py  chat.py  main.py  typesense_func.py
app/models/: model.py
backend/app/: pyproject.toml
backend/app/app/api/v1/: api.py
backend/app/app/api/v1/endpoints/: chat.py  search.py
backend/app/app/utils/: agents.py  callback.py  chains.py  tools.py
fe/: prototype-ui.py  sample-result.py
frontend/app/: main.py  pyproject.toml
